# pypi-fairylandfuture

./: .editorconfig  .env  .gitignore  .pre-commit-config.yaml  .ruff.toml  compiled-requirements.txt  dev-win-requirements.txt  fairyland-future.yaml  fairyland-logger.yaml  main.py  pyproject.toml  release-win-requirements.txt  requirements.txt  setup.py
.github/workflows/: CommitSerialNumber.yaml  ci.yml
conf/dev/: unix-requirements.txt  win-requirements.txt
docs/en-US/fairylandfuture/logging/: README.md
docs/zh-CN/manuals/modules/: datetimes.md
fairylandfuture/: __init__.py
fairylandfuture/abstract/: __init__.py  database.py
fairylandfuture/abstract/modules/: db.py
fairylandfuture/builder/: __init__.py
fairylandfuture/common/: __init__.py
fairylandfuture/common/validator/: __init__.py
fairylandfuture/const/: __init__.py
fairylandfuture/const/http/: __init__.py  response.py
fairylandfuture/const/response/: code.py
fairylandfuture/core/: __init__.py
fairylandfuture/core/metaclass/: __init__.py
fairylandfuture/core/metaclasses/: singleton.py
fairylandfuture/core/superclass/: __init__.py  decorators.py  enumerate.py  file.py  schema.py  structure.py  validators.py
fairylandfuture/core/superclass/enums/: __init__.py
fairylandfuture/core/superclass/exceptions/: __init__.py
fairylandfuture/core/superclass/modules/: __init__.py
fairylandfuture/core/superclass/structures/: __init__.py
fairylandfuture/database/: __init__.py  elasticsearch.py  mysql.py  postgresql.py
fairylandfuture/decorators/: __init__.py
fairylandfuture/enums/: __init__.py  chrono.py  enconding.py  file.py  generic.py  journal.py
fairylandfuture/enums/http/: __init__.py
fairylandfuture/exceptions/: __init__.py  db.py  es.py  file.py  generic.py  program.py
fairylandfuture/exceptions/messages/: __init__.py  es.py
fairylandfuture/helpers/: __init__.py
fairylandfuture/helpers/json/: __init__.py  _encoder.py  encoder.py  serializer.py
fairylandfuture/helpers/parser/: __init__.py  ua.py
fairylandfuture/interface/: __init__.py
fairylandfuture/interface/drf/: __init__.py  response.py
fairylandfuture/interface2/: __init__.py
fairylandfuture/mixins/: __init__.py
fairylandfuture/mixins/drf/: __init__.py
fairylandfuture/models/: __init__.py  _base.py
fairylandfuture/modules/db/: es.py  mysql.py  postgresql.py
fairylandfuture/modules/file/: generic.py
fairylandfuture/modules/validator/: validators.py
fairylandfuture/structures/: __init__.py  database.py
fairylandfuture/structures/builder/: __init__.py  database.py  db.py  elasticsearch.py
fairylandfuture/structures/generic/: api.py
fairylandfuture/structures/http/: __init__.py  request.py  response.py
fairylandfuture/test/: py2test.py
fairylandfuture/toolkit/: __init__.py
fairylandfuture/toolkit/builder/tree/: generic.py
fairylandfuture/toolkit/builder/trees/: generic.py
fairylandfuture/toolkit/chron/: __init__.py
fairylandfuture/toolkit/encryption/: cipher.py  encoder.py
fairylandfuture/toolkit/factory/: serialization.py
fairylandfuture/toolkit/fakerlib/: network.py  user.py
fairylandfuture/toolkit/journal/: __init__.py
fairylandfuture/toolkit/tools/: __init__.py
fairylandfuture/toolkit/tools/file/: __init__.py  generic.py
fairylandfuture/toolkit/tools/http/: __init__.py  request.py
fairylandfuture/toolkit/tools/validator/: __init__.py  validate.py  validators.py
fairylandfuture/toolkit/utils/: __init__.py
fairylandfuture/toolkit/utils/builder/: __init__.py
fairylandfuture/toolkit/utils/chron/: __init__.py  _datetime.py
fairylandfuture/toolkit/utils/decorators/: __init__.py  classes.py  methods.py
fairylandfuture/toolkit/utils/encryption/: __init__.py  cipher.py  encoder.py
fairylandfuture/toolkit/utils/faker/: __init__.py  user.py
fairylandfuture/toolkit/utils/fakerlib/: generic.py  network.py  user.py
fairylandfuture/toolkit/utils/general/: __init__.py  constants.py
fairylandfuture/toolkit/utils/network/: __init__.py  local.py
fairylandfuture/toolkit/utils/parser/: __init__.py  ua.py
fairylandfuture/toolkit/utils/request/: __init__.py
fairylandfuture/toolkit/utils/validation/: __init__.py  strings.py
fairylandfuture/toolkit/utils/validator/: strings.py
fairylandfuture/toolkit/validator/: strings.py  validators.py
fairylandfuture/toolkits/chrono/: __init__.py
fairylandfuture/toolkits/encryption/: cipher.py  encoder.py
fairylandfuture/toolkits/generic/: structure.py
fairylandfuture/tools/: string.py
fairylandfuture/utils/: __init__.py
fairylandfuture/utils/django/: __init__.py
fairylandfuture/utils/faker/: __init__.py
fairylandfuture/utils/net/: __init__.py
fairylandfuture/utils/secret/: __init__.py  encoder.py
fairylandfuture/utils/validator/: __init__.py
helper/: __init__.py  configure.py
scripts/upload/: publish2pypi.ps1
src/fairylandfuture/: __init__.py  _logger.py  logger.py
src/fairylandfuture/abstract/: logger.py
src/fairylandfuture/common/: request.py
src/fairylandfuture/core/metaclass/: singleton.py
src/fairylandfuture/core/superclass/: decorators.py  enumerate.py  exception.py  (+4 more)
src/fairylandfuture/database/: __mysql.py  _postgresql.py  elasticsearch.py  mysql.py  postgresql.py
src/fairylandfuture/enums/: __init__.py
src/fairylandfuture/models/: __init__.py  _base.py
src/fairylandfuture/structures/: database.py
src/fairylandfuture/utils/: _datetime_utils.py  strings.py
test/: __init__.py  test.py
test/20250313/: _test.py
test/case/: __init__.py  test_fairylandfuture.py  test_imports.py  test_main.py  test_mcs.py
test/devkit/: _test_import.py
test/devkit/20250509/: _test.py
test/devkit/archive/: _test_20250107.py
test/devkit/t20250429/: _test.py  main.py
test/devunit/: _test_import.py
test/devunit/20250211/: _test.py
test/devunit/20250212/: _test.py
test/devunit/20250218/: _test.py
test/fairylandfuture/modules/: datetimes.py
test/helper/: __init__.py  test_serializer.py
test/script/: t.py
test/toolkit/: __init__.py  test_generic.py
test/utils/: config.py  logger.py
(+65 files in other folders)
