[project]
name = "pypi-fairylandfuture"
version = "1.3.4"
description = "A comprehensive Python package for FairylandFuture project"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "FairylandTech", email = "fairylandfuture@protonmail.com" }
]
keywords = ["fairylandfuture", "fairyland", "toolkit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
]

# Production Dependencies
dependencies = [
    # FairylandTech Internal
    "pypi-fairylandlogger",
    # Core Utilities
    "loguru",
    "python-dateutil",
    "python-dotenv",
    "requests",
    "pyyaml",
    "cryptography",
    "netifaces",
    "pydantic",
    "ua-parser",
    "user-agents",
    "faker",
    "pypinyin",
    # Database Drivers & ORM
    "pymysql",
    "psycopg2-binary",
    "mysql-connector-python",
    "sqlalchemy",
    "DBUtils",
    "aiomysql",
    "psycopg[binary,async]",
    # Message Queue & Search
    "kafka-python",
    "elasticsearch[async]",
    "opensearch-py",
    # Django Ecosystem
    "django",
    "djangorestframework",
    "django-redis",
    "django-filter",
    "django-cors-headers",
    "django-simpleui",
    "django-tenant-schemas",
    "django-tenants",
    "django-extensions",
    "django-celery-results",
    # API Documentation
    "drf-yasg",
    "drf-spectacular",
    "coreapi",
    "pygments",
    "markdown",
    "uritemplate",
    # Web Automation & Scraping
    "selenium",
    "webdriver-manager",
    "beautifulsoup4",
    # Data Analysis
    "pandas",
    "numpy",
    "openpyxl",
    "xlrd",
    "xlwt",
    "xlsxwriter",
    # Async & Networking
    "aiohttp",
    "asyncio",
    "httpx",
    # Email & Files
    "secure-smtplib",
    "email-validator",
    "python-magic",
    "watchdog",
    "orjson",
]

[project.urls]
Homepage = "https://github.com/FairylandTech/pypi-fairylandfuture"
Repository = "https://github.com/FairylandTech/pypi-fairylandfuture"
Documentation = "https://github.com/FairylandTech/pypi-fairylandfuture#readme"
Issues = "https://github.com/FairylandTech/pypi-fairylandfuture/issues"

# Development Dependencies : uv sync --all-extras
[project.optional-dependencies]
# uv sync --extra dev
dev = [
    # Linting & Formatting (Ruff 替代了 black, isort, flake8)
    "ruff",
    # Type Checking
    "mypy",
    "django-stubs",
    "django-stubs-ext",
    "djangorestframework-stubs",
    "pandas-stubs",
    "types-requests",
    "types-python-dateutil",
    "types-PyYAML",
    "types-cryptography",
    "pyright",
    # Testing
    "pytest",
    "pytest-django",
    "pytest-cov",
    # Build Tools
    "pip-tools",
    "pipdeptree",
    "build",
    "twine",
    "wheel",
    "setuptools",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fairylandfuture*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
fairylandfuture = ["py.typed"]

[tool.ruff]
line-length = 170
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "DJ"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["fairylandfuture"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["mypy_django_plugin.main", "pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "kafka.*",
    "elasticsearch.*",
    "opensearchpy.*",
    "DBUtils.*",
    "user_agents.*",
    "ua_parser.*",
    "pypinyin.*",
    "secure_smtplib.*",
    "netifaces.*",
    "pymysql.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=fairylandfuture"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
django_find_project = true
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:UserWarning",
    "ignore::DeprecationWarning",
]
